argocd/manifests/paperless/overlays/prod/paperless-gpt-middleware-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: paperless-gpt-oauth2-forwardauth
  namespace: paperless
spec:
  forwardAuth:
    address: http://10.43.210.86:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - Authorization
