argocd/manifests/paperless/overlays/prod/paperless-gpt-oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-gpt-oauth2-proxy
  namespace: paperless
spec:
  type: ClusterIP
  clusterIP: 10.43.210.86
  selector:
    app: paperless-gpt-oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: http
      protocol: TCP
