argocd/manifests/paperless/overlays/prod/paperless-gpt-oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-gpt-oauth2-proxy
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: paperless-gpt.levangie.dev
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: paperless-gpt-oauth2-proxy
                port:
                  number: 4180
